[package]
name = "oci-runtime-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
caps = { version = "0.5.5", features = ["serde_support"] }
clap = { version = "4.5.21", features = ["cargo", "derive"] }
clap-markdown = "0.1.4"
colog = "1.3.0"
env_logger = "0.11.5"
json = "0.12.4"
json-patch = "3.0.1"
log = "0.4.22"
nix = { version = "0.29.0", features= ["user"]}
rand = "0.8.5"
scopeguard = "1.2.0"
serde = "1.0.216"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
toml = "0.8.19"
walkdir = "2.5.0"
